[tool.poetry]
name = "legendre"
version = "0.1.0"
description = ""
authors = ["EdwardDB"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.11.0"
scipy = "^1.8.1"
jupyterlab = "^3.4.2"
matplotlib = "^3.5.2"
pytorch-lightning = "^1.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
